@@ -1,2 +1,3 @@
 - Added the $user parameter to the gravityflowchecklists_checklists filter
+- Fixed an issue where the spinner appears when attempting to exempt a form without permissions.
 - Updated the font size of the meta information for submitted forms.
